--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,8 @@ body {
     background-position: center;
     background-size: cover;
     overflow: hidden;
-    background: url('./assets/dia.png');
     background-position: center;
     background-size: cover;
-    opacity: 95%;
 }
 
 h5 {
@@ -25,6 +23,14 @@ h5 {
     font-size: 11px;
     color: #999;
     padding-top: 20px;
+}
+
+.sun {
+    cursor: default;
+}
+
+.moon {
+    cursor: default;
 }
 
 .dark-mode {
@@ -63,6 +69,10 @@ h5 {
     margin-top: 15px;
 }
 
+input[type="checkbox"] {
+    cursor: pointer;
+}
+
 .modes {
     display: flex;
     flex-direction: row;
@@ -81,7 +91,15 @@ h5 {
     background-position: center;
     background-size: cover;
     position: fixed;
-    opacity: 90%;
+    opacity: 95%;
+}
+
+.day {
+    background: url('./assets/dia.png');
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    opacity: 95%;
 }
 
 .container {
@@ -95,13 +113,11 @@ h5 {
 }
 
 .main-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 20vh;
+    display: inline;
+    height: 10vh;
     width: 50vw;
-    padding-left: 10vw;
-    padding-top: 15px;
+    margin-left: 5vw;
+    margin-top: 20px;
 }
 
 .tasks {
@@ -150,6 +166,32 @@ h5 {
 .todo-form {
     display: flex;
     flex-direction: row;
+    height: 5vh;
+}
+
+
+.todo-row {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background-color: #5d0cff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 100%;
+    height: 20px;
+    margin: 8px;
+    margin-left: -1px;
+}
+
+.complete {
+    text-decoration: line-through;
+    opacity: 0.4;
+  }
+
+.todo-task {
+    margin-bottom: 15px;
 }
 
 .icons {
@@ -158,6 +200,7 @@ h5 {
     align-items: center;
     height: 20px;
     cursor: pointer;
+    width: 10%;
 }
 
 @media (max-width: 940px) {
