--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ h5 {
 }
 
 .light-mode {
-    background-color: #fff;
+    background-color: #eee;
     color: #333;
     transition: background-color 0.25s ease-in-out;
     height: 80%;
@@ -131,15 +131,20 @@ input[type="checkbox"] {
     opacity: 0.4;
 }
 
+::placeholder {
+    color: #fff;
+    opacity: 60%;
+}
+
 .todo-input {
     padding: 14px 32px 14px 16px;
-    height: 40px;
     border-radius: 4px 0 0 4px;
-    border: 2px solid #5d0cff;
     outline: none;
-    background: transparent;
-    color: #fff;
+    background:#4ecdc4;
     width: 80%;
+    color: #fff;
+    height: 40px;
+    border: 2px solid #38968f;
 }
 
 .todo-button {
@@ -148,11 +153,7 @@ input[type="checkbox"] {
     height: 40px;
     cursor: pointer;
     outline: none;
-    background: linear-gradient(
-      90deg,
-      rgba(93, 12, 255, 1) 0%,
-      rgba(155, 0, 250, 1) 100%
-    );
+    background: linear-gradient(to right, #4ecdc4, #556270);
     color: #fff;
     text-transform: capitalize;
     width: 15vw;
@@ -176,13 +177,14 @@ input[type="checkbox"] {
     justify-content: space-between;
     align-items: center;
     color: #fff;
-    background-color: #5d0cff;
+    background: linear-gradient(to right, #4ecdc4, #556270);
     padding: 20px;
     border-radius: 5px;
     width: 100%;
     height: 20px;
     margin: 8px;
     margin-left: -1px;
+    margin-top: 15px;
 }
 
 .complete {
@@ -200,7 +202,7 @@ input[type="checkbox"] {
     align-items: center;
     height: 20px;
     cursor: pointer;
-    width: 10%;
+    width: 10vh;
 }
 
 @media (max-width: 940px) {
